# neo4j-rust-driver

./: .gitignore  .pre-commit-config.yaml  .testkit_version  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: tests.yaml
doc_test_utils/: Cargo.toml
doc_test_utils/src/: lib.rs
examples/: basic.rs
neo4j/: Cargo.toml  build.rs
neo4j/examples/: basic.rs  foo.rs
neo4j/src/: address_.rs  driver.rs  error_.rs  lib.rs  macros.rs  sync.rs  time.rs  util.rs  value.rs
neo4j/src/address_/: resolution.rs
neo4j/src/driver/: config.rs  eager_result.rs  home_db_cache.rs  io.rs  record.rs  record_stream.rs  session.rs  summary.rs  transaction.rs
neo4j/src/driver/config/: auth.rs  notification.rs
neo4j/src/driver/io/: bolt.rs  deadline.rs  pool.rs  varint.rs
neo4j/src/driver/io/bolt/: bolt5x0.rs  bolt5x1.rs  bolt5x2.rs  bolt5x3.rs  bolt5x4.rs  bolt5x6.rs  bolt5x7.rs  bolt5x8.rs  bolt6x0.rs  bolt_common.rs  bolt_handler.rs  bolt_state.rs  chunk.rs  handshake.rs  message.rs  message_parameters.rs  packstream.rs  response.rs  socket.rs
neo4j/src/driver/io/bolt/bolt4x4/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x0/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x1/: protocol.rs
neo4j/src/driver/io/bolt/bolt5x2/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x3/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x4/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x6/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x7/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt5x8/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt6x0/: protocol.rs  translator.rs
neo4j/src/driver/io/bolt/bolt_handler/: begin_5x0.rs  begin_5x2.rs  commit_5x0.rs  common.rs  goodbye_5x0.rs  hello_4x4.rs  hello_5x0.rs  hello_5x1.rs  hello_5x2.rs  hello_5x3.rs  hello_5x4.rs  hello_5x8.rs  pull_discard_5x0.rs  pull_discard_5x6.rs  reauth_5x1.rs  reauth_unsupported.rs  res_failure_5x0.rs  res_failure_5x7.rs  res_ignored_5x0.rs  res_record_5x0.rs  res_success_5x0.rs  reset_5x0.rs  rollback_5x0.rs  route_5x0.rs  run_5x0.rs  run_5x2.rs  run_5x6.rs  telemetry5x4.rs  telemetry_no_op.rs
neo4j/src/driver/io/bolt/packstream/: deserialize.rs  error.rs  serialize.rs  tests.rs
neo4j/src/driver/io/pool/: routing.rs  single_pool.rs  ssr_tracker.rs
neo4j/src/driver/session/: bookmarks.rs  config.rs  retry.rs
neo4j/src/test_data/: public-api.txt
neo4j/src/value/: graph.rs  ser.rs  time.rs  unsupported_type.rs  value_map.rs  value_receive.rs  value_send.rs  vector.rs
neo4j/src/value/time/: components.rs  date.rs  date_time.rs  date_time_components.rs  date_time_fixed.rs  duration.rs  local_date_time.rs  local_time.rs  time.rs
neo4j/src/value/time/components/: date_components.rs  date_time_components.rs  time_components.rs
src/: address.rs  address_.rs  codec.rs  driver.rs  error.rs  lib.rs  macros.rs  sync.rs  testkit_backend.rs  time.rs  util.rs  value.rs
src/address_/: resolution.rs
src/codec/: packstream.rs
src/codec/packstream/: deserialize.rs  error.rs  serialize.rs  tests.rs
src/driver/: config.rs  eager_result.rs  io.rs  record.rs  record_stream.rs  session.rs  summary.rs  transaction.rs
src/driver/config/: auth.rs
src/driver/io/: bolt.rs  deadline.rs  pool.rs
src/driver/io/bolt/: bolt4x4.rs  bolt5x0.rs  bolt_common.rs  bolt_state.rs  chunk.rs  message.rs  message_parameters.rs  packstream.rs  response.rs  socket.rs
src/driver/io/bolt/bolt4x4/: protocol.rs  translator.rs
src/driver/io/bolt/bolt5x0/: protocol.rs  translator.rs
src/driver/io/bolt/bolt5x1/: protocol.rs  translator.rs
src/driver/io/bolt/packstream/: deserialize.rs  error.rs  serialize.rs  tests.rs  value.rs
src/driver/io/codec/: packstream_.rs
src/driver/io/pool/: routing.rs  single_pool.rs
src/driver/session/: bookmarks.rs  config.rs  retry.rs
src/testkit_backend/: auth.rs  backend_id.rs  bookmarks.rs  cypher_value.rs  driver_holder.rs  errors.rs  requests.rs  resolver.rs  responses.rs  session_holder.rs
src/value/: de.rs  graph.rs  spatial.rs  time.rs  value_receive.rs  value_send.rs
testkit/: .dockerignore  Dockerfile  _common.py  backend.py  build.py  integration.py  stress.py  unittests.py
testkit_backend/: Cargo.toml
testkit_backend/src/: logging.rs  main.rs  testkit_backend.rs
testkit_backend/src/testkit_backend/: auth.rs  backend_id.rs  bookmarks.rs  cypher_value.rs  driver_holder.rs  errors.rs  requests.rs  resolver.rs  responses.rs  session_holder.rs
