[workspace]
resolver = "2"
members = [
    "neo4j",
    "doc_test_utils",
    "testkit_backend",
]

[workspace.package]
authors = ["Rouven Bauer <neo4j-rust@rouvenbauer.de>"]
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
atomic_refcell = "0.1.13"
chrono_0_4 = { package = "chrono", version = "0.4.43" }
chrono-tz_0_9 = { package = "chrono-tz", version = "0.9.0" }
chrono-tz_0_10 = { package = "chrono-tz", version = "0.10.4" }
duplicate = "2.0.1"
enum_dispatch = "0.3.13"
env_logger = "0.11.9"
expect-test = "1.5.1"
fern = "0.7.1"
flume = "0.12.0"
itertools = "0.14.0"
lazy-regex = "3.6.0"
log = "0.4.29"
mockall = "0.14.0"
mockall_double = "0.3.1"
named-lock = "0.4.1"
parking_lot = "0.12.5"
public-api = "0.50.3"
rand = "0.10.0"
rstest = "0.26.1"
rustdoc-json = "0.9.8"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.0"
rustls-platform-verifier = "0.6.2"
rustup-toolchain = "0.1.10"
serde = "1.0.228"
serde_json = "1.0.149"
socket2 = "0.6.2"
thiserror = "2.0.18"
uriparse = "0.6.4"
usize_cast = "1.1.0"
