[package]
name = "doc_test_utils"
version = "0.0.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4j = { path = "../neo4j", features = ["_internal_doc_test"] }

env_logger = { workspace = true }
log = { workspace = true }
named-lock = { workspace = true }
