[package]
name = "neo4j"
version = "0.0.2"
edition = "2021"
rust-version = "1.70"
readme = "../README.md"
description = "Bolt driver for Neo4j."
license = "Apache-2.0"
keywords = ["neo4j", "driver", "network", "bolt", "client"]
categories = ["database"]
authors = ["Rouven Bauer <neo4j-rust@rouvenbauer.de>"]
repository = "https://github.com/robsdedude/neo4j-rust-driver/"
homepage = "https://github.com/robsdedude/neo4j-rust-driver/"
documentation = "https://docs.rs/neo4j"
exclude = ["/testkit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# internal feature, do not use, not supported
_internal_testkit_backend = []

[dependencies]
atomic_refcell = "0.1.13"
chrono = "0.4.37"
chrono-tz = "0.8.6"
duplicate = "1.0.0"
enum_dispatch = "0.3.13"
itertools = "0.11.0"
log = "0.4.21"
mockall_double = "0.3.1"
parking_lot = "0.12.1"
rand = "0.8.5"
rustls = "0.22.3"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
rustls-pki-types = "1.4.1"
socket2 = "0.5.6"
thiserror = "1.0.58"
uriparse = "0.6.4"
usize_cast = "1.1.0"

[dev-dependencies]
doc_test_utils = { path = "../doc_test_utils" }
env_logger = "0.10.2"
lazy_static = "1.4.0"
mockall = "0.12.1"
rstest = "0.18.2"
