[package]
name = "neo4j"
version = "0.2.0"
edition = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"
description = "Bolt driver for Neo4j."
license = "Apache-2.0"
keywords = ["neo4j", "driver", "network", "bolt", "client"]
categories = ["database"]
authors = { workspace = true }
repository = "https://github.com/robsdedude/neo4j-rust-driver/"
homepage = "https://github.com/robsdedude/neo4j-rust-driver/"
documentation = "https://docs.rs/neo4j"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# internal features: DO NOT USE! No support, no sem-ver guarantees, no nothing.
_internal_testkit_backend = []
_internal_public_api = [
    "dep:public-api",
    "dep:expect-test",
    "dep:rustdoc-json",
    "dep:rustup-toolchain",
]

[dependencies]
atomic_refcell = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
duplicate = { workspace = true }
enum_dispatch = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
mockall_double = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-platform-verifier = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
uriparse = { workspace = true }
usize_cast = { workspace = true }

expect-test = { workspace = true, optional = true }
public-api = { workspace = true, optional = true }
rustdoc-json = { workspace = true, optional = true }
rustup-toolchain = { workspace = true, optional = true }

[dev-dependencies]
doc_test_utils = { path = "../doc_test_utils" }
env_logger = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "chrono::date::Date",
    "chrono::datetime::DateTime",
    "chrono::naive::date::NaiveDate",
    "chrono::naive::datetime::NaiveDateTime",
    "chrono::naive::time::NaiveTime",
    "chrono::offset::fixed::FixedOffset",
    "chrono::time::Time",

    "chrono_tz::timezones::Tz",

    "rustls::client::client_conn::ClientConfig",
]
