[package]
name = "testkit_backend"
version = "0.0.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4j = { path = "../neo4j", features = ["_internal_testkit_backend"] }

atomic_refcell = { workspace = true }
chrono = { workspace = true }
fern = { workspace = true }
flume = { workspace = true }
itertools = { workspace = true }
lazy-regex = { workspace = true }
log = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
