[package]
name = "testkit_backend"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4j = { path = "../neo4j", features = ["_internal_testkit_backend"] }

atomic_refcell = "0.1.13"
chrono = "0.4.37"
fern = "0.7.1"
flume = "0.11.0"
itertools = "0.14.0"
lazy-regex = "3.1.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "2.0.11"
rustls = { version = "0.23.4", features = ["ring"] }
